Restructured code. Created Year3 Question2!

--- a/OllyHomeworkProject/OllyHomeworkProject.csproj
+++ b/OllyHomeworkProject/OllyHomeworkProject.csproj
@@ -45,11 +45,15 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Util\Generator.cs" />
-    <Compile Include="Util\Item.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj">
+      <Project>{161a27d0-a7e9-4e8a-92b6-34ae989eff43}</Project>
+      <Name>BLL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
