--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -40,14 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Common\Generator.cs" />
+    <Compile Include="Data\Names.cs" />
+    <Compile Include="Data\ShopItems.cs" />
     <Compile Include="Model\Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Year3\Questions.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Year3\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
